--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,36 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
+h1 {
+    font-size: 48px;
+}
+
+h2 {
+    font-size: 36px;
+}
+
+.btn.primary {
+    background-color: white;
+    color: black;
+    border-radius: 8px;
+    padding: 10px 20px; 
+    transition-duration: 0.3s;
+}
+
+.btn.primary:hover {
+    background-color: rgb(120, 120, 120);
+    color: rgba(255, 236, 236, 0.8);
+    cursor: pointer;
+}
+
+.flex {
+    display: flex;
+}
+
+.column {
+    flex-direction: column;
+}
+
+.row {
+    flex-direction: row;
+}
