--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,10 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
+body {
+    color: #242424;
+}
+
 h1 {
     font-size: 48px;
 }
@@ -15,7 +19,7 @@ h3 {
 }
 
 .btn.primary {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     color: black;
     border-radius: 8px;
     padding: 10px 20px; 
