--- a/src/app.css
+++ b/src/app.css
@@ -47,3 +47,17 @@ h3 {
 .row {
     flex-direction: row;
 }
+
+@media only screen and (max-width: 720px) {
+    .btn.primary {
+        padding: 10px 10px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    p, .btn{
+        font-size: 13px;
+    }
+}
